[package]
name = "irestart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "irestart"
path="src/lib.rs"
crate-type=["cdylib"]

[[bin]]
name="irestartrun"
path="src/main.rs"

[dependencies]
color-eyre = "0.6.1"
ctor = "0.1.22"
dll-syringe = { version = "0.11.1", features = ["into-x86-from-x64"] }

